--- a/azure.yaml
+++ b/azure.yaml
@@ -4,3 +4,15 @@ metadata:
     template: pg-sk-agents-lab@0.0.1
 requiredVersions:
     azd: ">= 1.10.0"
+hooks:
+    postprovision:
+      windows:
+        shell: pwsh
+        run: ./scripts/write_env.ps1
+        interactive: true
+        continueOnError: false
+      posix:
+        shell: sh
+        run: ./scripts/write_env.sh
+        interactive: true
+        continueOnError: false
